--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,5 +1,6 @@
 db:
-  host: "localhost"
-  port: 5432
-  user: "user"
-  password: "pass"
+  host: "localhost1"
+  port: 54321
+  name: "demo1"
+  user: "user1"
+  pass: "pass1"
