--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,22 @@
 ENV=local
 
+# Database connection parameters (for local Go application)
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=user
-DB_PASS=pass
-DB_name=demo
+DB_USER=demogo
+DB_PASS=demogo
+DB_NAME=demogo
+DB_SSLMODE=disable
 
+# Database URL for migrations in Docker (uses service name 'db' instead of 'localhost')
+# This is automatically formed from DB_* variables, but you can override it
+# DB_URL_MIGRATE=postgres://demogo:demogo@db:5432/demogo?sslmode=disable
+
+# Database pool settings
+DB_MAX_CONNECTIONS=10
+DB_MIN_CONNECTIONS=2
+DB_MAX_CONNECTION_LIFETIME_MINUTES=60
+DB_MAX_CONNECTION_IDLE_TIME_MINUTES=10
+
+# Logger
 LOG_LEVEL=debug
