--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     entrypoint: [
       "migrate",
       "-path", "/migrations",
-      "-database", "${DB_URL}"
+      "-database", "${DB_URL_MIGRATE}"
     ]
 
 volumes:
